fix(club-boats): replace names with count on mobile devices
Fix names overflow issue on mobile devices.

--- a/src/styles/pages/_onboarding.scss
+++ b/src/styles/pages/_onboarding.scss
@@ -126,8 +126,15 @@
     }
 }
 
+.onboarding-club__boats-added {
+    margin-top: 3rem;
+    font-weight: 600;
+    color: rgb(85, 85, 85);
+}
+
 .onboarding-club__boats-names {
     @include flex-center(row);
+    flex-wrap: wrap;
     width: 80vw;
     margin-top: 3rem;
 
@@ -136,6 +143,7 @@
         border: 0.5px solid $color-black;
         border-radius: 5px;
         padding: 5px 10px;
+        margin-bottom: 1.5rem;
 
         &:not(:last-of-type) {
             margin-right: 1rem;
